[menu] Fixing layout issue with line breaks + footer right element text alignment.

--- a/src/common.css
+++ b/src/common.css
@@ -372,6 +372,9 @@ footer p {
     margin: 0;
     font-size: 15px;
 }
+footer div + div p{
+    text-align: right;
+}
 
 footer a {
     color: #c1c6d2;
